--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -511,12 +511,12 @@ header {
     .navbar__header1 {
         position: fixed;
         width: 100%;
-        min-height: 400px;
+        
         top: 100px;
         display: flex;
         flex-direction: column;
         align-items: center;
-        background: red;
+        background: #fff;
         z-index: 9999;
     }
     .navbar__header1{
