--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -378,10 +378,13 @@ header {
 .gosti h1 {
     width: 100%;
     text-align: center;
+    font-size: 42px;
 }
 
 .gosti p {
     width: 100%;
+    font-size: 22px;
+    opacity: .6;
     text-align: center;
 }
 /* Media Queries for Responsive Design */
