--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -373,6 +373,7 @@ header {
 .gosti {
     width: 100%;
     height: 100vh;
+    padding: 0 16%;
 }
 
 .gosti h1 {
@@ -396,7 +397,13 @@ header {
 .gosti_main-block {
     display: flex;
     flex-direction: column;
-    column-gap: 20px;
+}
+
+.blockk {
+    width: 535px;
+    height: 226px;
+    background: red;
+    margin: 15px 0;
 }
 
 
