--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -655,6 +655,9 @@ header {
         height: 1670px;
     }
 
+    .gosti {
+        padding: 0 22px;
+    }
     .sect3__main h1 {
         font-size: 40px;
         position: absolute;
