--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -372,7 +372,6 @@ header {
 
 .gosti {
     width: 100%;
-    height: 100vh;
     padding: 0 16%;
 }
 
@@ -395,6 +394,7 @@ header {
 }
 
 .gosti_main-block {
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
