--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -182,6 +182,13 @@ header {
     column-gap: 20px;
 }
 
+.footer {
+    width: 100%;
+    height: 60px;
+    background: #3E3F3E;
+    padding: 20px 30px;
+}
+
 .home1 {
     width: 325px;
     height: 440px;
