--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -187,6 +187,14 @@ header {
     height: 60px;
     background: #3E3F3E;
     padding: 20px 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+.footer a {
+    color: #fff;
 }
 
 .home1 {
